Simples ajustes no rodapé da página, com o link sendo direcionado corretamente à filtragem Necessita estilização

--- a/leisure/src/main/resources/templates/anuncio.html
+++ b/leisure/src/main/resources/templates/anuncio.html
@@ -25,10 +25,10 @@
                             <span>Imovel</span>
                             <select class="filtro__filtro-item" name="tipo">
                                 <option value="" selected></option>
-                                <option value="apartamento">apartamento</option>
-                                <option value="casa">casa</option>
-                                <option value="sitio">sitios</option>
-                                <option value="terrenos">Terrenos</option> 
+                                <option value="apartamento">Apartamento</option>
+                                <option value="casa">Casa</option>
+                                <option value="sitio">Sítio</option>
+                                <option value="terrenos">Terreno</option> 
                             </select>
                         </label>
                     </div>
