--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -196,7 +196,7 @@
                     </li>
                     <li class="lista-menu__item btnMeusAnuncios">
                         <a class="container__link btnAnunciar" href="/usuario/perfil/anuncio">
-                            <span>Meus anuncios</span>
+                            <span>Meus anúncios</span>
                         </a>
                     </li>
                     <li class="lista-menu__item btnMeusDados">
