Ajustes no rodape - Ajustado ao clicar na categoria e ser direcionado ao filtro desejado - Estilizações

--- a/leisure/src/main/resources/templates/fragments/head.html
+++ b/leisure/src/main/resources/templates/fragments/head.html
@@ -35,4 +35,5 @@
     <script src="/script/botoes.js" defer></script>
     <script src="/script/swiper.js" defer></script>
     <script src="/script/mascaras.js" defer></script>
+    <script src="/script/rodape.js" defer></script>
 </head>
