--- a/leisure/src/main/resources/static/style/rodape.css
+++ b/leisure/src/main/resources/static/style/rodape.css
@@ -3,7 +3,7 @@
 }
 .rodape__conteudo{
     display: flex;
-    align-items: center;
+    align-items: baseline;
     justify-content: center;
     flex-wrap: wrap;
     gap: 2em;
