Ajustes na pagina loginCadastro - Removido acesso ao modal - Estilização da página loginCadastro

--- a/leisure/src/main/resources/static/style/style.css
+++ b/leisure/src/main/resources/static/style/style.css
@@ -14,6 +14,7 @@
 @import url('index-sobre.css');
 @import url('index-time.css');
 @import url('login-cadastro.css');
+@import url('loginCadastro.css');
 @import url('modal.css');
 @import url('premium.css');
 @import url('profile-anunciar.css');
