--- a/leisure/src/main/resources/templates/fragments/cabecalho.html
+++ b/leisure/src/main/resources/templates/fragments/cabecalho.html
@@ -88,7 +88,7 @@
     </nav>
     <div class="cabecalho__navegacao">
         <!-- MODAL -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content modal__cadastrar" data-modal>
                     <i class="fa-regular fa-xmark fa-2xl" data-bs-dismiss="modal"></i>
@@ -157,7 +157,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </header>
 
