Alterações Backend: -Criação da coluna "senha descriptografada" -Ajustes no método de deletar o usuário

--- a/leisure/src/main/resources/templates/anuncio.html
+++ b/leisure/src/main/resources/templates/anuncio.html
@@ -90,9 +90,8 @@
 
         <section class="resultado">
             <div class="resultado__pesquisa">
-                <span class="resultado__pesquisa__item">
-                    1 resultado para o filtro
-                </span>
+                <span class="resultado__pesquisa__item" th:text="${imovelPorId.size}">
+                </span><span> resultado(s) para a pesquisa</span>
             </div>
             <div th:replace="~{fragments/resultado-pesquisa :: resultado-pesquisa}"></div> 
         </section>
