--- a/leisure/src/main/resources/templates/fragments/head.html
+++ b/leisure/src/main/resources/templates/fragments/head.html
@@ -29,6 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
 
     <!-- JS LEISURE -->
+    <script src="/script/jquery-3.7.1.js" defer></script>
     <script src="/script/main.js" defer></script>
     <script src="/script/viacep.js" defer></script>
     <script src="/script/profile.js" defer></script>
