--- a/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
+++ b/leisure/src/main/resources/templates/fragments/resultado-pesquisa.html
@@ -3,7 +3,8 @@
         <div class="resultado__filtro__card">
             <div class="resultado__filtro__card__conteudo">
                 <div class="resultado__filtro__card__conteudo__imagem">
-                    <img src="/img/anuncio/card/card01.png" alt="imagem teste card">
+                    <!-- <img src="/img/anuncio/card/card01.png" alt="imagem teste card"> -->
+                    <img th:src="|http://localhost:8080/usuario/perfil/imovel/imagem/${imovel.id}|" alt="Foto do imóvel">
                 </div>
                 <div class="resultado__filtro__card__conteudo__content">
                     <span class="resultado__filtro__card__conteudo__content__item">
