Método de mudar a foto do imóvel funcionando

--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -272,15 +272,16 @@
     <div th:if="${erro}">
         <div class="alert alert-danger" th:text="${erro}"></div>
     </div>
+
     <section class="anuncio " th:if="${imovelPorId.size != 0}" th:each="imovel : ${imovelPorId}">
         <div class="anuncio__card">
-            <form th:id="${imovel.id}" method="post" enctype="multipart/form-data" th:action="@{/usuario/perfil/salvar-foto}" data-form-imagem>
+            <form th:id="${imovel.id}" method="post" enctype="multipart/form-data" th:action="@{/usuario/perfil/salvar-foto}" >
                 <div class="meusdados__imagem">
         
                     <label for="input-file">
                         <img th:src="|http://localhost:8080/usuario/perfil/imovel/imagem/${imovel.id}|">
                     </label>
-                    <input id="input-file" type="file" name="file" accept="image /*" data-input-imagem>
+                    <input id="input-file" type="file" name="file" accept="image /*" >
 
                 </div>
                 <input name="id" th:value="${imovel.id}" id="idIMovel" hidden>
