Ajustado profile.js - redução de código do camel case para o cadastro de imóveis

--- a/leisure/src/main/resources/templates/fragments/profile.html
+++ b/leisure/src/main/resources/templates/fragments/profile.html
@@ -155,15 +155,15 @@
             </div>
             <div class="dados__container__conteudo">
                 <span>Bairro</span>
-                <input class="anunciar__conteudo__input" name="bairro" type="text" id="bairro" required/>
+                <input class="anunciar__conteudo__input" name="bairro" type="text" id="bairro" required data-anunciar="endereco"/>
             </div>
             <div class="dados__container__conteudo">
                 <span>Cidade</span>
-                <input class="anunciar__conteudo__input" name="cidade" type="text" id="cidade" required/>
+                <input class="anunciar__conteudo__input" name="cidade" type="text" id="cidade" required data-anunciar="endereco"/>
             </div>
             <div class="dados__container__conteudo">
                 <span>Rua</span>
-                <input class="anunciar__conteudo__input" name="rua" type="text" id="rua" required/>
+                <input class="anunciar__conteudo__input" name="rua" type="text" id="rua" required data-anunciar="endereco"/>
             </div>
             <div class="anunciar__conteudo__botao">
                 <button class="anunciar__conteudo__botao-anterior anterior8" type="button">Anterior</button>
