Ajustes no perfil.html - Adicionado um carrossel na pagina inicial do perfil para informações - estilizado o carrossel para adequar a pagina de perfil

--- a/leisure/src/main/resources/templates/perfil.html
+++ b/leisure/src/main/resources/templates/perfil.html
@@ -9,7 +9,7 @@
     <header th:replace="~{fragments/cabecalho :: perfil}"></header>
 
     <!-- ANUNCIAR / ANUNCIO / MEUS-DADOS -->
-    <main class="main">
+    <main class="perfil__main">
         <section th:replace="
             ( (${selecao} == anunciar) ? ~{fragments/profile :: anunciar} :
             ( (${selecao} == anuncio) ? ~{fragments/profile :: anuncio} :
